Design Complete ReviewAttendance and 50%Backend

--- a/Sep2018_MVC/Sep2018_MVC.csproj
+++ b/Sep2018_MVC/Sep2018_MVC.csproj
@@ -433,6 +433,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="images\banner.jpg" />
     <Content Include="images\bannerleft.jpg" />
+    <Content Include="images\bg2_rev.jpg" />
+    <Content Include="images\bg_rev.jpg" />
     <Content Include="images\logo.png" />
     <Content Include="images\notification.png" />
     <Content Include="Models\Model1.Context.tt">
