--- a/Sep2018_MVC/Sep2018_MVC.csproj
+++ b/Sep2018_MVC/Sep2018_MVC.csproj
@@ -62,6 +62,10 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Microsoft.Owin, Version=2.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.2.1.0\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
@@ -498,6 +502,8 @@
     <Content Include="Areas\Staff\Views\Shared\_SiderBarStaff.cshtml" />
     <Content Include="Areas\Staff\Views\Teacher\ReviewAttendace.cshtml" />
     <Content Include="Areas\Staff\Views\Teacher\RevAttenDetail.cshtml" />
+    <Content Include="Areas\Staff\Views\Teacher\vieOffline.cshtml" />
+    <Content Include="Areas\Staff\Views\Teacher\RevOffline.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
