--- a/Sep2018_MVC/packages.config
+++ b/Sep2018_MVC/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net461" />
