Completed Statistical for course & year

--- a/Sep2018_MVC/Sep2018_MVC.csproj
+++ b/Sep2018_MVC/Sep2018_MVC.csproj
@@ -416,6 +416,7 @@
     <Content Include="Areas\Staff\Views\Giaovu\ListClass.cshtml" />
     <Content Include="Areas\Staff\Views\Giaovu\Statistical.cshtml" />
     <Content Include="Areas\Staff\Views\Giaovu\StatisticalYear.cshtml" />
+    <Content Include="Areas\Staff\Views\Giaovu\StatisticalCourse.cshtml" />
     <None Include="Areas\Staff\Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Content\admin.css" />
     <Content Include="Content\bootstrap-theme.css" />
